force-app/main/default/objects/QTB_Bill_Flow_Controller__c/QTB_Bill_Flow_Controller__c.object-meta.xml
<CustomObject>
    <label>QTB Bill Flow Controller</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QTB Bill Flow Controllers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>