force-app/main/default/objects/QTB_Bill_Flow_Controller__c/fields/Execute_Post_Bill_Run__c.field-meta.xml
<CustomField>
    <fullName>Execute_Post_Bill_Run__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This Checkbox can not be unchecked</inlineHelpText>
    <label>Execute Post Bill Run</label>
    <type>Checkbox</type>
</CustomField>