force-app/main/default/objects/QTB_Bill_Flow_Controller__c/fields/Execute_Pre_Bill_Run__c.field-meta.xml
<CustomField>
    <fullName>Execute_Pre_Bill_Run__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This checkbox can not be unchecked</inlineHelpText>
    <label>Execute Pre-Bill Run</label>
    <type>Checkbox</type>
</CustomField>