force-app/main/default/objects/QTB_Bill_Flow_Controller__c/fields/Invoice_Scheduler__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Scheduler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Scheduler</label>
    <referenceTo>blng__InvoiceScheduler__c</referenceTo>
    <relationshipLabel>QTB Bill Flow Controllers</relationshipLabel>
    <relationshipName>QTB_Bill_Flow_Controllers</relationshipName>
    <type>Lookup</type>
</CustomField>