force-app/main/default/objects/QTB_Bill_Flow_Controller__c/fields/QTB_PreBill_Run_Status__c.field-meta.xml
<CustomField>
    <fullName>QTB_PreBill_Run_Status__c</fullName>
    <description>#GITLAB:5038 --&gt; to store the pre bill batch run status</description>
    <label>PreBill Run Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>