force-app/main/default/objects/QTB_Bill_Flow_Controller__c/fields/QTB_Rebill_Invoice__c.field-meta.xml
<CustomField>
    <fullName>QTB_Rebill_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Gitlab US# 24172 -- holding the rebillInvoice on Bill Flow controller</description>
    <label>Rebill Invoice</label>
    <referenceTo>blng__Invoice__c</referenceTo>
    <relationshipLabel>QTB Bill Flow Controllers (Rebill Invoice)</relationshipLabel>
    <relationshipName>QTB_Bill_Flow_Controllers1</relationshipName>
    <type>Lookup</type>
</CustomField>