force-app/main/default/objects/QTB_Bill_Flow_Controller__c/fields/QTB_Rebill_Order__c.field-meta.xml
<CustomField>
    <fullName>QTB_Rebill_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Gitlab US# 24172 -- holding the rebill order on Bill Flow controller</description>
    <label>Rebill Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>QTB Bill Flow Controllers</relationshipLabel>
    <relationshipName>QTB_Bill_Flow_Controllers</relationshipName>
    <type>Lookup</type>
</CustomField>