force-app/main/default/objects/QTB_Bill_Flow_Controller__c/fields/QTB_Target_Date__c.field-meta.xml
<CustomField>
    <fullName>QTB_Target_Date__c</fullName>
    <description>Gitlab US# 24172 -- holding the targetDate of UsageSummaryEnd+1 on Bill Flow controller</description>
    <label>Target Date</label>
    <type>Date</type>
</CustomField>