force-app/main/default/objects/QTB_Bill_Flow_Controller__c/fields/QTB_UniqueJob__c.field-meta.xml
<CustomField>
    <fullName>QTB_UniqueJob__c</fullName>
    <description>#GITLAB:5038 --&gt; to store the combination of id and target date and to use in the duplicate rules</description>
    <label>UniqueJob</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>