force-app/main/default/objects/QTB_Bill_Flow_Controller__c/validationRules/QTB_Can_not_uncheck_Execute_Post_Bill.validationRule-meta.xml
<ValidationRule>
    <fullName>QTB_Can_not_uncheck_Execute_Post_Bill</fullName>
    <active>true</active>
    <description>#GITLAB--&gt;5039 : Can&apos;t uncheck the pre bill checkbox once it is checked.</description>
    <errorConditionFormula>AND(NOT($Setup.Metadata_Activation_Settings__c.Disable_VR__c &amp;&amp;
OR(ISBLANK($Setup.Metadata_Activation_Settings__c.SObject_API_Name__c),
CONTAINS($Setup.Metadata_Activation_Settings__c.SObject_API_Name__c, &apos;QTB_Bill_Flow_Controller__c&apos;))),
 ISCHANGED(Execute_Post_Bill_Run__c), PRIORVALUE(Execute_Post_Bill_Run__c)= True)</errorConditionFormula>
    <errorMessage>Execute Post Bill Run can&apos;t Unchecked once it is Checked.</errorMessage>
</ValidationRule>