force-app/main/default/objects/QTB_Bill_Flow_Controller__c/validationRules/QTB_ExecuteSubLinesBatchBeforePostBill.validationRule-meta.xml
<ValidationRule>
    <fullName>QTB_ExecuteSubLinesBatchBeforePostBill</fullName>
    <active>true</active>
    <description>#Gitlab: 30514--&gt; Sub Invoice Line batch should be executed before post bill run for Product Based legal Entity and storage/service period is true
#Gitlab : 30942 --&gt; enabling it for Flat rate</description>
    <errorConditionFormula>AND(NOT($Setup.Metadata_Activation_Settings__c.Disable_VR__c &amp;&amp;
OR(ISBLANK($Setup.Metadata_Activation_Settings__c.SObject_API_Name__c),
CONTAINS($Setup.Metadata_Activation_Settings__c.SObject_API_Name__c, &apos;QTB_Bill_Flow_Controller__c&apos;))),
( (QTB_Rebill_Invoice__r.blng__Account__r.QTB_Legal_Entity__r.QTB_Storage_Service_Period_Range__c = true  &amp;&amp;   NOT(ISPICKVAL(QTB_Rebill_Invoice__r.QTB_Invoice_Type__c, &apos;ReBill&apos;)) ) || Invoice_Scheduler__r.QTB_Legal_Entity__r.QTB_Storage_Service_Period_Range__c = true), ISCHANGED( Execute_Post_Bill_Run__c ),   QTB_SubInvoiceLine_Creation__c  = FALSE
)</errorConditionFormula>
    <errorMessage>Post Bill Run Can be checked only after the Execute Sub Invoice Line Run is Checked</errorMessage>
</ValidationRule>