force-app/main/default/objects/QTB_Bill_Flow_Controller__c/validationRules/QTB_Post_Bill_Check_on_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>QTB_Post_Bill_Check_on_Creation</fullName>
    <active>true</active>
    <description>#GITLAB:5038 --&gt; post bill can be checked only after the pre bill is checked.</description>
    <errorConditionFormula>AND(NOT($Setup.Metadata_Activation_Settings__c.Disable_VR__c &amp;&amp;
OR(ISBLANK($Setup.Metadata_Activation_Settings__c.SObject_API_Name__c),
CONTAINS($Setup.Metadata_Activation_Settings__c.SObject_API_Name__c, &apos;QTB_Bill_Flow_Controller__c&apos;))),
 ISNEW() ,  Execute_Pre_Bill_Run__c = FALSE,  Execute_Post_Bill_Run__c = TRUE,

NOT(Contains(Invoice_Scheduler__r.Name, &apos;SecureITAD&apos;)))</errorConditionFormula>
    <errorMessage>Post Bill Run can be checked only after the Pre Bill Run is checked.</errorMessage>
</ValidationRule>